--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,27 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+
+
+fos_rest:
+    routing_loader:
+        default_format: json
+    view:
+        view_response_listener: true
+
+
+
+nelmio_cors:
+    paths:
+        '^/api/':
+            allow_origin: ['http://localhost:4200']
+            allow_headers: ['origin', 'content-type', 'authorization']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+
+lexik_jwt_authentication:
+    private_key_path: '%jwt_private_key_path%'
+    public_key_path:  '%jwt_public_key_path%'
+    pass_phrase:      '%jwt_key_pass_phrase%'
+    token_ttl:        '%jwt_token_ttl%'
