--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+    resource: "@WCSShareKanBundle/Resources/config/routing.yml"
+    type: rest
+    prefix: /api
+
+api_login_check:
+  path: /api/login_check
