--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+    acme.listeners.authorization_header_fix:
+        class: Alcalyn\AuthorizationHeaderFix\AuthorizationHeaderFixListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, priority: 10 }
