--- a/web/.htaccess
+++ b/web/.htaccess
@@ -17,6 +17,7 @@ DirectoryIndex app.php
     Options -MultiViews
 </IfModule>
 
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
@@ -31,8 +32,9 @@ DirectoryIndex app.php
     RewriteRule ^(.*) - [E=BASE:%1]
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+	SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+	RewriteCond %{HTTP:Authorization} ^(.+)$
+	RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Redirect to URI without front controller to prevent duplicate content
     # (with and without `/app.php`). Only do this redirect on the initial
