Fix du serializer, création d'un service, fix relation

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,12 +41,12 @@ security:
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
 
-        api:
-            pattern:   ^/api
-            stateless: true
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+#        api:
+#            pattern:   ^/api
+#            stateless: true
+#            guard:
+#                authenticators:
+#                    - lexik_jwt_authentication.jwt_token_authenticator
         main:
             pattern: ^/
             anonymous: ~
