--- a/src/WCS/ShareKanBundle/Resources/config/services.yml
+++ b/src/WCS/ShareKanBundle/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-#    wcs_share_kan.example:
-#        class: WCS\ShareKanBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    jsonparse:
+        class: WCS\ShareKanBundle\Services\JsonParse
