Modification du serializer

--- a/src/WCS/ShareKanBundle/Resources/config/services.yml
+++ b/src/WCS/ShareKanBundle/Resources/config/services.yml
@@ -1,3 +1,5 @@
 services:
     jsonparse:
         class: WCS\ShareKanBundle\Services\JsonParse
+        calls:
+            - [ setContainer, [ '@service_container' ]]
