--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,6 +32,8 @@ framework:
     assets: ~
     php_errors:
         log: true
+    serializer:
+        enabled: false
 
 # Twig Configuration
 twig:
@@ -75,6 +77,8 @@ fos_rest:
         default_format: json
     view:
         view_response_listener: true
+    serializer:
+        serialize_null:  true
 
 
 
