--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.3",
-    "angular-utils-pagination": "^0.11.1"
+    "angular-utils-pagination": "^0.11.1",
+    "ng-youtube-embed": "^1.7.10"
   }
 }
